--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,5 +197,6 @@
     <string name="nxt_string_wlcome">Next</string>
     <string name="validateyouremail">VALIDATE YOUR EMAIL BEFORE LOGIN !</string>
     <string name="toastcheckyourmail">Check your mailbox to login ;)</string>
+    <string name="age">Age</string>
 
 </resources>
